--- a/resume/site/index.html
+++ b/resume/site/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Malaika Z Charboneau Resume</title>
+	<title>Your Resume</title>
 	
 	<link rel="stylesheet" href="scripts/base/bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" href="scripts/base/bower_components/bootstrap/dist/css/bootstrap-theme.css">
